# tagging-rs

./: Cargo.toml  LICENSE.txt  README.md
src/: lib.rs
src/storage/: memory.rs  mod.rs  redis.rs
